public/css/style-dark.css
/* ... */
.preloader div:nth-child(10) {
  transform: rotateZ(324deg);
  animation: rotateCircle10 1.5s infinite linear;
  z-index: 0;
}

@keyframes rotateCircle10 {
  45% {
    opacity: 0;
  }
  45.0009% {
    opacity: 1;
    transform: rotateZ(-288deg);
  }
  52% {
    transform: rotateZ(-324deg);
  }
  102% {
    transform: rotateZ(-324deg);
  }
  100% {
    transform: rotateZ(-324deg);
    opacity: 1;
  }
}
/***************************

app marcup

***************************/
body {
  background-color: #00151f;
  overflow: hidden;
}

body::-webkit-scrollbar {
  opacity: 0;
}

.trm-app-frame {
  border: solid 10px #00151f;
  position: relative;
  overflow: hidden;
  border-radius: 20px;
  width: 100vw;
  height: 100vh;
  background-color: #02162b;
  box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.6);
  transition: 0.4s ease-in-out;
}
.trm-app-frame .trm-hidden-switcher {
  display: none;
}
.trm-app-frame .trm-content-start {
  margin: 0 40px;
}
.trm-app-frame .trm-content-start:before {
  content: "";
  position: absolute;
  left: 30px;
  top: -8px;
  height: 8px;
  width: calc(100% - 60px);
  background-color: #00283a;
  border-radius: 5px 5px 0 0;
  opacity: 0.3;
}
.trm-app-frame .trm-content {
  /* margin-top: -40px; */
  padding: 0 0 60px;
  z-index: 0;
  position: relative;
  z-index: 1;
}
.trm-app-frame .container {
  position: relative;
}

.mtMinus40 {
  margin-top: -40px;
}

@media (max-width: 992px) {
  body {
    background-color: #02162b;
    overflow: auto;
  }

  .trm-app-frame {
    border: none;
    overflow: scroll;
    border-radius: 0;
    width: 100%;
    height: 100%;
  }
  .trm-app-frame .trm-content {
    margin-top: 0;
    padding: 0 0 40px;
  }
}

/***************************

top bar

***************************/
.trm-top-bar {
  position: fixed;
  left: 0;
  right: 0;
  border-radius: 10px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.6);
  z-index: 9;
  background-color: #00283a;
  width: 100%;
  height: 80px;
}
.trm-top-bar:after {
  content: "";
  position: absolute;
  left: 30px;
  height: 8px;
  width: calc(100% - 60px);
  background-color: #00283a;
  border-radius: 0 0 5px 5px;
  opacity: 0.3;
}
.trm-top-bar .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.trm-top-bar .container .trm-left-side {
  height: 100%;
  display: flex;
  align-items: center;
  width: 30%;
}
.trm-top-bar .container .trm-left-side .trm-logo-frame {
  display: flex;
  align-items: center;
  height: 80px;
}
.trm-top-bar .container .trm-left-side .trm-logo-frame .trm-logo-text {
  position: relative;
  font-weight: 900;
  font-size: 22px;
  color: #dedee0;
  letter-spacing: 0;
}
.trm-top-bar .container .trm-left-side .trm-logo-frame .trm-logo-text span {
  color: var(--color-main);
}
.trm-top-bar .container .trm-left-side .trm-logo-frame img {
  width: 100px !important;
}
.trm-top-bar .container .trm-right-side {
  height: 100%;
  display: flex;
  align-items: center;
  width: 70%;
  justify-content: flex-end;
}

@media (max-width: 1200px) {
  .trm-top-bar {
    border-radius: 0;
  }
  .trm-top-bar .container .trm-right-side {
    border-radius: 0 0 10px 10px;
    padding: 0 0 40px;
    display: flex;
    flex-direction: column;
    background-color: #00283a;
    position: absolute;
    z-index: -1;
    top: 80px;
    left: 0;
    height: auto;
    width: 100%;
    opacity: 0;
    pointer-events: none;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.6);
    transform: translateY(20px);
    transition: 0.4s ease-in-out;
  }
  .trm-top-bar .container .trm-right-side.trm-active {
    opacity: 1;
    pointer-events: all;
    transform: translateY(0);
  }
}
/***************************

menu

***************************/
.trm-menu {
  margin-right: 10px;
}
.trm-menu nav ul {
  display: flex;
  margin: 0;
  padding: 0;
}
.trm-menu nav ul li {
  height: 80px;
  position: relative;
  list-style-type: none;
  display: flex;
  justify-content: center;
  align-items: center;
}
.trm-menu nav ul li:after {
  content: "";
  position: absolute;
  bottom: 0;
  border-radius: 10px;
  height: 4px;
  width: 0;
  background-color: var(--color-main);
  transition: 0.4s ease-in-out;
}
.trm-menu nav ul li.current-item:after,
.trm-menu nav ul li.current-menu-item:after {
  width: 100%;
}
.trm-menu nav ul li a {
  white-space: nowrap;
  height: 100%;
  width: 100%;
  padding: 0 20px;
  line-height: 80px;
  color: #dedee0;
  text-transform: uppercase;
  font-size: 11px;
  letter-spacing: 2px;
  font-weight: 700;
  transition: 0.4s ease-in-out;
}
.trm-menu nav ul li a:hover {
  color: var(--color-main);
}
.trm-menu nav ul li ul {
  padding: 10px;
  pointer-events: none;
  background-color: #00283a;
  opacity: 0;
  transform: translateY(20px);
  height: auto;
  top: 80px;
  left: -10px;
  border-radius: 0 0 10px 10px;
  box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.6);
  min-width: 130px;
  position: absolute;
  z-index: 9;
  display: flex;
  flex-direction: column;
  transition: 0.4s ease-in-out;
}
.trm-menu nav ul li ul li {
  height: 50px;
  margin: 0;
  justify-content: flex-start;
}
.trm-menu nav ul li ul li:after,
.trm-menu nav ul li ul li:before {
  display: none;
}
.trm-menu nav ul li ul li a {
  line-height: 50px;
}
.trm-menu nav ul li:hover ul {
  pointer-events: all;
  opacity: 1;
  transform: translateY(0);
}
/* ... */

